# myedit

./: .gitignore  Cargo.toml  test_file.rs
buffer-editor/: Cargo.toml
buffer-editor/src/: lib.rs
buffer-manager/: Cargo.toml
buffer-manager/src/: lib.rs
buffer-render/: Cargo.toml
buffer-render/src/: lib.rs
command/: Cargo.toml
command/src/: lib.rs
core/: Cargo.toml
core/libs/: librender.dylib
core/src/: back_buffer.rs  client.rs  editor.rs  main.rs  send_cmd.rs  utils.rs
cursor/: Cargo.toml
cursor/src/: lib.rs
input/: Cargo.toml
input/src/: lib.rs
lang-rust/: Cargo.toml
lang-rust/src/: colors.rs  lib.rs
registers/src/: lib.rs
render/: Cargo.toml
render/src/: lib.rs
search/: Cargo.toml
search/src/: lib.rs
types/: Cargo.toml
types/src/: commands.rs  lib.rs  modes.rs
