[package]
name = "registers"
version = "0.1.0"
authors = ["Pearce Keesling <pearce.keesling@lifeomic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "registers"
crate-type = ["dylib"]

[dependencies]
types = { path = "../types" }

[dev-dependencies]
crossbeam-channel="0.3.9"
