[package]
name = "buffer-manager"
version = "0.1.0"
authors = ["Pearce Keesling <pearce.keesling@lifeomic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "buffermanager"
crate-type = ["dylib"]

[dependencies]
ropey = "1.0.1"
types = { path = "../types" }
log = "0.4.8"
