[package]
name = "core"
version = "0.1.0"
authors = ["Pearce Keesling <pearce.keesling@lifeomic.com>"]
edition = "2018"

[dependencies]
libloading = "0.5.1"
notify = "4.0.12"
types = { path = "../types" }
ropey = "1.0.1"
termion = "1.5.3"
crossbeam-channel = "0.3.8"
structopt = "0.2.18"
generational-arena = "0.2.2"
serde = "1.0.94"
rmp-serde = "0.13.7"
