[package]
name = "cursor"
version = "0.1.0"
authors = ["Pearce Keesling <pearce.keesling@lifeomic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cursor"
crate-type = ["dylib"]

[dependencies]
ropey = "1.0.1"
types = { path = "../types" }
termion = "1.5.3"
