[package]
name = "lang-rust"
version = "0.1.0"
authors = ["Pearce Keesling <pearce.keesling@lifeomic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lang_rust"
crate-type = ["dylib"]

[dependencies]
types = { path = "../types" }
ra_ide_api = { git = "https://github.com/rust-analyzer/rust-analyzer" }
