[package]
name = "search"
version = "0.1.0"
authors = ["Pearce Keesling <pearce.keesling@lifeomic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "search"
crate-type = ["dylib"]

[dependencies]
types = { path = "../types" }
termion = "1.5.3"
