[package]
name = "types"
version = "0.1.0"
authors = ["Pearce Keesling <pearce.keesling@lifeomic.com>"]
edition = "2018"

[dependencies]
ropey = "1.0.1"
notify = "4.0.12"
termion = "1.5.3"
rmp-serde = "0.13.7"
serde = "1.0.94"
serde_derive = "1.0.94"
slotmap = { version = "0.3.0", features = ["serde"] }
